--- a/listaExercicios_01/03_itensCompra.html
+++ b/listaExercicios_01/03_itensCompra.html
@@ -8,10 +8,14 @@
     //A lista completa de compras é: fruta1, fruta2, fruta3, bebida1, bebida2, bebida3.
 
     //ENTRADA
-
-
+const fruta1 = prompt("informe a primeira fruta")
+const fruta2 = prompt("informe a segunda fruta")
+const fruta3 = prompt("informe a terceira fruta")
+const bebida1 = prompt("informe a primeira bebida")
+const bebida2 = prompt("informe a segunda bebida")
+const bebida3 = prompt("informe a terceira bebida")
     //PROCESSAMENTO
-
+let 
 
     //SAÍDA
 
