--- a/listaExercicios_01/05_adicionarSUV.html
+++ b/listaExercicios_01/05_adicionarSUV.html
@@ -6,8 +6,9 @@
     //Apresente a lista antiga de SUVs e a nova lista, após a adição do veículo solicitado.
 
     //ENTRADA
+const add = prompt("que carro deseja add (Tiggo, Sportage, Tucson, EcoSport)")
 
-
+let carrosSUV = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
     //PROCESSAMENTO
 
 
