--- a/listaExercicios_01/04_removerSUV.html
+++ b/listaExercicios_01/04_removerSUV.html
@@ -14,5 +14,5 @@
     const listaAntiga = carrosSUV.join();
     carrosSUV.splice(posicao, 1)
     //SAÍDA
-
+document.write(`lista antiga : ${listaAntiga}. Lista nova: ${carrosSUV.join(",")}`);
 </script>
