--- a/listaExercicios_01/02_arrayDecrescente_3.html
+++ b/listaExercicios_01/02_arrayDecrescente_3.html
@@ -1,21 +1,36 @@
 <script>
-    //Problema: Array em ordem decrescente
-    //Peça para um usuário inserir três números. Crie um array com os três números, colocando-os em ordem decrescente. Para ordenar, NÃO use o método reverse();
-    //Retorne os elementos do array, separando-os por hífen (n1 - n2 - n3).
+      //Problema: Array em ordem decrescente
+      //Peça para um usuário inserir três números. Crie um array com os três números, colocando-os em ordem decrescente. Para ordenar, NÃO use o método reverse();
+      //Retorne os elementos do array, separando-os por hífen (n1 - n2 - n3).
 
-    //ENTRADA
-const n1 = Number(prompt("informe o numero"));
-const n2 = Number(prompt("informe o numero"));
-const n3 = Number(prompt("informe o numero"));
-    //PROCESSAMENTO
-let arrayNumero = []
-if (n3 > n2 && n3 > n1 && n2 > n1)
-{arrayNumero = [n3, n2, n1]}
-else if (n2 > n3 && n2 > n1 && n3 > n1)
-arrayNumero = [n2, n3, n1]
-else if (n1 > n2 && n1 > n3 && n2 > n3) {
-    arrayNumero = [n1, n2, n3]
-}
-//SAÍDA
-document.write(arrayNumero.join(" - "));
+      //ENTRADA
+  const n1 = Number(prompt("informe o numero"));
+  const n2 = Number(prompt("informe o numero"));
+  const n3 = Number(prompt("informe o numero"));
+      //PROCESSAMENTO
+  let arrayNumero = []
+  if (n3 > n2 &&  n2 > n1){
+      arrayNumero = [n3, n2, n1]
+  }
+  else if (n2 > n3 && n3 > n1)
+      {
+        arrayNumero = [n2, n3, n1]
+    }
+  else if (n1 > n2 && n2 > n3) {
+      arrayNumero = [n1, n2, n3]
+  }
+else if (n1 > n2 && n3 > n1)
+{
+      arrayNumero = [n3, n1, n2]
+  }
+  else if (n1 > n3 && n3 > n2)
+  {
+      arrayNumero = [n1, n3, n2]
+  }
+  else if (n2 > n1 && n2 > n3)
+  {
+      arrayNumero = [n2, n3, n1]
+  }
+  //SAÍDA
+  document.write(arrayNumero.join(" - "));
 </script>
