--- a/listaExercicios_01/03_itensCompra.html
+++ b/listaExercicios_01/03_itensCompra.html
@@ -15,8 +15,9 @@ const bebida1 = prompt("informe a primeira bebida")
 const bebida2 = prompt("informe a segunda bebida")
 const bebida3 = prompt("informe a terceira bebida")
     //PROCESSAMENTO
-let 
-
-    //SAÍDA
+const frutas = []
+const bebidas = []
+let listaCompleta   
+//SAÍDA
 
 </script>
