--- a/listaExercicios_01/03_itensCompra.html
+++ b/listaExercicios_01/03_itensCompra.html
@@ -16,9 +16,9 @@ const bebida2 = prompt("informe a segunda bebida")
 const bebida3 = prompt("informe a terceira bebida")
     //PROCESSAMENTO
 let frutas = [fruta1, fruta2, fruta3];
-document.write(`lista frutas: ${frutas}`)
+document.write(`lista frutas: ${frutas} <br/>`)
 const bebidas = [bebida1, bebida2, bebida3];
-document.write(` lista de bebidas: ${bebidas}`)
+document.write(` lista de bebidas: ${bebidas} <br/>`)
 let listaCompleta  = frutas.concat(bebidas) 
 document.write(` lista completa: ${listaCompleta}`)
 //SAÍDA
