--- a/listaExercicios_01/05_adicionarSUV.html
+++ b/listaExercicios_01/05_adicionarSUV.html
@@ -6,12 +6,16 @@
     //Apresente a lista antiga de SUVs e a nova lista, após a adição do veículo solicitado.
 
     //ENTRADA
-const add = prompt("que carro deseja add (Tiggo, Sportage, Tucson, EcoSport)")
+    let carrosSUV = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
 
-let carrosSUV = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
+    const adicionar = prompt("que carro deseja adicionar a lista de carros SUV?");
     //PROCESSAMENTO
 
+    const posicaoCarro = carrosSUV.indexOf(adicionar);
+    const listaAntiga = carrosSUV.join(", ");
+    carrosSUV.push(adicionar);
 
     //SAÍDA
-
+    document.write(`Lista antiga: ${listaAntiga} <br/>
+     Lista nova: ${carrosSUV.join(", ")}`); 
 </script>
