--- a/listaExercicios_01/08_procuraLetra.html
+++ b/listaExercicios_01/08_procuraLetra.html
@@ -13,7 +13,7 @@
     const posicao = palavra.search(letra)
 
     if (posicao >= 0) {
-        alert(`primeira posição da letra na palavra é igual a : ${posicao}`)
+        alert(`primeira posição da letra na palavra é igual a : ${(posicao + 1 )}`)
     } else {
         alert("nao existe na palavra")
     }
